# jug

./: .gitignore  README.md  index.html  params.json
doc/presentation/: presentation.tex
doc/presentation/img/img_src/: contour.psd  sphere_intersection.psd
doc/report/: project_report.tex
src/: AbstractProblem.h  CMakeLists.txt  abstractproblemstate.h  abstractproblemstateinfo.h  abstractsearchproblem.h  climber.cpp  climber.h  climbercoordinates.cpp  climbercoordinates.h  climberspecs.cpp  climberspecs.h  climberstate.cpp  climberstate.h  geometry.cpp  geometry.h  globals.h  grip.cpp  grip.h  main.cpp  pathproblem.cpp  pathproblem.h  physics.cpp  physics.h  route.cpp  route.h  routefinder.cpp  routefinder.cpp.autosave  routefinder.h  searcher.cpp  searcher.h  searcher_p.h  utils.cpp  utils.h
