CMAKE_MINIMUM_REQUIRED(VERSION 2.8.6 FATAL_ERROR)

PROJECT(jug)
SET(CMAKE_BUILD_TYPE DEBUG)
SET(CMAKE_CXX_FLAGS "-Wall")

FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})

FIND_PACKAGE(OpenCV REQUIRED)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(.)

FILE(GLOB JUG_HEADERS *.h)
FILE(GLOB JUG_SRC *.cpp)

ADD_EXECUTABLE(jug main.cpp ${JUG_HEADERS} ${JUG_SRC})
TARGET_LINK_LIBRARIES(jug ${QT_LIBRARIES} ${OpenCV_LIBS})
